--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -154,7 +154,7 @@ p {
 }
 
 .text-gradient {
-  background: linear-gradient(90deg, #ff0000, #00ff00, #0000ff);
+  background: linear-gradient(90deg, #f87575cb, #770655, #0000ff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: gradient-animation 3s ease infinite;
